# uno-design-mcp-server

./: .gitignore  README.md  pyproject.toml  server.py
docs/cognitive/: load-reduction.md  progressive-disclosure.md
docs/components/: all.md
docs/laws/: all.md  doherty-threshold.md  fitts-law.md  hicks-law.md  miller-law.md
docs/monochrome/: contrast-system.md  shape-language.md
docs/optimization/: task-flows.md
docs/patterns/: desktop-all.md  layout-all-both.md
docs/philosophy/: efficiency-first.md  monochrome-manifesto.md
docs/principles/: affordance.md  checklist-all.md  consistency.md  visual-hierarchy.md
docs/responsive/: breakpoints.md  touch-targets.md
resources/monochrome/: palette.md
src/UnoDesignMcpServer/: Program.cs  README.md  UnoDesignMcpServer.csproj  docs  resources
src/UnoDesignMcpServer/Services/: ContentLoaderService.cs
src/UnoDesignMcpServer/Tools/: DesignGuidelinesTools.cs
src/UnoDesignMcpServer/docs/flows/: all.md
src/UnoDesignMcpServer/docs/patterns/: mobile-all.md
src/UnoDesignMcpServer/docs/principles/: accessibility-all.md  all.md  feedback.md  simplicity.md
src/UnoDesignMcpServer/resources/colors/: all.md
src/UnoDesignMcpServer/resources/typography/: all.md
