[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uno-design-mcp-server"
version = "1.0.0"
description = "MCP Server for UI/UX Design Principles for Uno Platform Apps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel" }
]
keywords = ["mcp", "uno-platform", "ui-ux", "design", "mobile", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
uno-design-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
